# testIA

./: README.md  docker-compose.yml
backend/: .env.docker  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: auth.py  chat.py  matches.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  conversation.py  match.py  message.py  psychological_profile.py  user.py
backend/app/schemas/: auth.py  chat.py  match.py
backend/app/services/: chat_service.py  match_service.py
backend/sql/: create_tables.sql  migration_001_add_tags.sql
docs/: architecture.md
frontend/: index.html
